--- a/_publications/2024-CTI.md
+++ b/_publications/2024-CTI.md
@@ -2,12 +2,12 @@
 title: "Using LLMs to Automate Threat Intelligence Analysis Workflows in Security Operation Centers"
 collection: publications
 permalink: /publication/2024-llm-threat
-date: 2024
+date: 2024-01-01
 venue: 'arXiv'
 paperurl: ''
 citation: 'PeiYu Tseng, ZihDwo Yeh, Xushu Dai, Peng Liu. (2024). &quot;Using LLMs to Automate Threat Intelligence Analysis Workflows in Security Operation Centers.&quot; <i>In progress</i>'
 ---
 
-SIEM systems are prevalent and play a critical role in a variety of analyst workflows in Security Operation Centers. However, modern SIEMs face a big challenge: they still cannot relieve analysts from the repetitive tasks involved in analyzing CTI (Cyber Threat Intelligence) reports written in natural languages. This project aims to develop an AI agent to replace the labor intensive repetitive tasks involved in analyzing CTI reports. The agent exploits the revolutionary capabilities of LLMs (e.g., GPT-4), but it does not require any human intervention.
+This paper explores the application of Large Language Models to automate and enhance threat intelligence analysis workflows in Security Operation Centers.
 
 [Download paper here](https://doi.org/10.48550/arXiv.2407.13093)
